# qlog

./: .gitignore  CMakeLists.txt  readme.md
code/: CMakeLists.txt
code/include/qlog/: qlog.h
code/include/qlog/detail/: logrecordmodel.h  qlogdef.h
code/src/: installloghandler.cpp  logrecordmodel.cpp
test/: CMakeLists.txt  Log2FileTest.cpp  LogTableTest.cpp
